[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Sailesh Bellamkonda", email = "4201725+SaileshBellamkonda@users.noreply.github.com"},
]
classifiers = [
    # see https://pypi.org/classifiers/
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: System :: Shells',
    'Topic :: Terminals',
]
dependencies = []
description = "Interactive CLI for Python"
keywords = [
    "icli",
    "cli"
]
license = {file = "LICENSE"}
name = "icli-vnext"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7, <4"
version = "0.0.5"


[project.urls]
repository = "https://github.com/Gold-Bull/python-icli.git"
